# knit-haskell

./: .gitignore  .haskellci_travis.yml  .hlint.yaml  .travis.yml  ChangeLog.md  LICENSE  Readme.md  cabal.project  hie.yaml  knit-haskell.cabal  package.yaml  travis-script.sh
.github/workflows/: ci.yml
.knit-haskell-cache2/cacheExample/: test.sbin  test2.sbin
data/knit-haskell-templates/: mindoc-pandoc-KH.html  pandoc-adaptive-bootstrap-KH.html  pandoc-bootstrap-KH.html
docs/: async_example.html  cache_example.html  cache_example2.html  index.html  mtl_example.html  multi_doc1.html  multi_doc2.html  random_example.html  simple_example.html
examples/: AsyncExample.hs  CacheExample.hs  CacheExample2.hs  CacheExample3.hs  ErrorExample.hs  ExampleDoc1.hs  ExampleMtl.hs  Index.hs  MtlExample.hs  MultiDocExample.hs  RandomExample.hs  SimpleExample.hs
examples/Arrows/: ArrowExample.hs  ArrowMulti.hs  ArrowSimple.hs
examples/html/: async_example.html  cache_example2.html  example1.html  example_simple.html  mtl_example.html  multi_doc1.html  random_example.html  simple_example.html
pandoc-templates/: minWithVega-pandoc.html  pandoc-adaptive-boostrap.html  pandoc-adaptive-bootstrap-KH.html
src/Control/Monad/Freer/: Docs.hs  Html.hs  Logger.hs  Pandoc.hs  PandocMonad.hs  Random.hs  RandomFu.hs
src/Html/Blaze/: Report.hs
src/Html/Lucid/: Report.hs
src/Knit/: Kernmantle.hs  Report.hs
src/Knit/Effect/: AtomicCache.hs  DataCache.hs  Docs.hs  Environment.hs  Html.hs  Logger.hs  Pandoc.hs  PandocMonad.hs  RandomFu.hs  Serialize.hs  Timer.hs  UnusedId.hs  WorkQueue.hs
src/Knit/Effect/Internal/: Logger.hs
src/Knit/Effects/: Docs.hs  Html.hs  Logger.hs  Pandoc.hs  PandocMonad.hs  RandomFu.hs
src/Knit/Kernmantle/: Report.hs
src/Knit/Report/: Blaze.hs  Cache.hs  DataCache.hs  EffectStack.hs  Error.hs  Lucid.hs  Output.hs  Pandoc.hs
src/Knit/Report/Input/: Html.hs  Latex.hs  RST.hs
src/Knit/Report/Input/Html/: Blaze.hs  Lucid.hs
src/Knit/Report/Input/MarkDown/: PandocMarkDown.hs
src/Knit/Report/Input/Table/: Colonnade.hs
src/Knit/Report/Input/Visualization/: Diagrams.hs  Hvega.hs
src/Knit/Report/Other/: Blaze.hs  Lucid.hs
src/Knit/Report/Output/: Html.hs
src/Knit/Utilities/: Streamly.hs  Timing.hs
src/Streamly/: Cereal.hs
src/Text/Pandoc/: Report.hs
testCache/: intList
