cabal-version:       2.2.0

name:                knit-haskell
version:             0.2.0.0
synopsis:            a minimal Rmarkdown sort of thing for haskell
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
-- copyright:
category:            Text
extra-source-files:  CHANGELOG.md    
Build-type: Simple
                     

library
  ghc-options: -Wall -O2 -funbox-strict-fields
  exposed-modules: Knit.Effects.Logger
                 , Knit.Effects.Docs
                 , Knit.Effects.Html
                 , Knit.Effects.RandomFu
                 , Knit.Effects.PandocMonad
                 , Knit.Effects.Pandoc
                 , Knit.Report.Lucid
                 , Knit.Report.Blaze
                 , Knit.Report.Pandoc

  build-depends:    aeson-pretty                      >= 0.8.7 && < 0.9,
                    base                              >= 4.12.0 && < 4.13,
                    bytestring                        >= 0.10.8 && < 0.11,
                    containers                        >= 0.6.0 && < 0.7,
                    text                              >= 1.2.3 && < 1.3,
                    time                              >= 1.8.0 && < 1.9,
                    random                            >= 1.1 && < 1.2,
                    blaze-html                        >= 0.9.1 && < 0.10,
                    freer-simple                      >= 1.2.1 && < 1.3,
                    hvega                             >= 0.1.0 && <= 0.2.0.0,
                    logging-effect                    >= 1.3.3 && < 1.4,
                    mtl                               >= 2.2.2 && < 2.3,
                    polysemy                          >= 0.1.0.0 && < 0.2.0.0,
                    prettyprinter                     >= 1.2.1 && < 1.3,
                    lucid                             >= 2.9.11 && < 2.10,
                    pandoc                            >= 2.7.2 && < 2.8,
                    random-fu                         >= 0.2.7 && < 0.3,
                    random-source                     >= 0.3.0 && < 0.4,

  hs-source-dirs:      src
  default-language:    Haskell2010


executable Example1
    main-is: ExampleDoc1.hs
    hs-source-dirs: examples
    ghc-options: -Wall -O2 
    build-depends: base >= 4.12.0 && < 4.13,
                   blaze-html                        >= 0.9.1 && < 0.10,
                   containers                        >= 0.6.0 && < 0.7,
                   here                              >= 1.2.10 && < 1.3.0,
                   hvega                             >= 0.1.0 && <= 0.2.0.0,
                   knit-haskell                      -any,
                   polysemy                          >= 0.1.0.0 && < 0.2.0.0,
                   text                              >= 1.2.3 && < 1.3


    default-language: Haskell2010                                         